--- a/styles.css
+++ b/styles.css
@@ -275,8 +275,6 @@ h3 {
 	margin-bottom: 30px;
 	cursor: pointer;
 	box-shadow: 0 0 6px 3px #b1b1b14b;
-
-
 }
 
 .boxpopulaire h5 {
@@ -284,14 +282,11 @@ h3 {
 	margin: 0;
 	padding-top: 10px;
 	font-weight: bold;
-
-
 }
 
 .boxpopulaire p {
 	font-size: 1em;
 	padding-bottom: 10px;
-
 }
 
 h1 {
@@ -439,33 +434,118 @@ main {
 
 #activitesection {
 	display: flex;
-  align-items: stretch;
-  ustify-content: space-between;
-  flex-direction: column;
-  border-radius: 20px;
-  padding-left: 2.2vw;
+    align-items: stretch;
+    flex-direction: column;
+    border-radius: 20px;
+    width: 100%;
+    margin-left: 2.2vw;
+    position: relative;
+}
+
+.activites {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 2%;
+ 	flex-direction: column;
+  flex-wrap: wrap;
+ 	background-color: #ffffff;
   width: 100%;
-  position: relative;
+  height: 35vw;
+
 }
 
 #activitesection h3 {
 	font-size: 1.7em;
 	font-weight: bolder;
 }
-
-.activites {
-	  display: flex;
-    margin-bottom: 30px;
-    background-color: #ffffff;
-    width: 100%;
-  	justify-content: space-between;
-  	height: 31.5vw;
-}
-
 .activites h4 {
 	font-size: 1.1em;
 	padding-left: 15px;
 	font-weight: bold;
+}
+.activite1 {
+    width: 20%;
+    display: flex;
+    height: 33.5vw;
+    border-radius: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 0 6px 3px #b1b1b14b;
+
+}
+
+.activite4 {
+    width: 20%;
+    display: flex;
+    height: 33.5vw;
+    border-radius: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 0 6px 3px #b1b1b14b;
+}
+
+.activite2 {
+		flex-basis: 60%;
+    height: 16vw;
+    border-radius: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 0 6px 3px #b1b1b14b;
+    margin-bottom: 18%;
+}
+
+.activite3 {
+		flex-basis: 40%;
+    height: 14vw;
+    border-radius: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 0 6px 3px #b1b1b14b;
+    display: flex;
+}
+
+
+.activite5 {
+		flex-basis: 45%;
+    height: 15vw;
+    border-radius: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 0 6px 3px #b1b1b14b;
+    display: flex;
+    margin-bottom: 17%;
+}
+
+.activite6 {
+		flex-basis: 45%;
+    height: 15vw;
+    border-radius: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 0 6px 3px #b1b1b14b;
+    display: flex;
+}
+.activite2et3,
+.activite5et6 {
+	width: 20%;
+}
+
+
+.imgactiv1,
+.imgactiv2,
+.imgactiv3,
+.imgactiv4 {
+	width: 100%;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+	object-fit: cover;
+}
+
+.imgactiv1 {
+	height: 29.5vw;
+}
+.imgactiv2 {
+	height: 12vw;
+}
+.imgactiv3 {
+	height: 10vw;
+}
+.imgactiv4 {
+	height: 11vw;
 }
 
 footer h5 {
@@ -483,79 +563,6 @@ footer ul {
 	padding: 0;
 }
 
-
-.activite1 {
-  display: flex;
-  padding: 0;
-}
-
-.activite2 {
- 	 display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: stretch;
-  -ms-flex-align: stretch;
-  align-items: stretch;
-  padding: 0;
-}
-
-.box1{
-  width: 75%;
-  padding: 0;
-  margin: 0;
-  box-shadow: 2px 2px 20px rgb(230, 230, 230);
-  border-radius: 20px;
-}
-.box2 {
-  width: 75%;
-  height: 50%;
-  padding: 0;
-  margin: 0;
-  box-shadow: 2px 2px 20px rgb(230, 230, 230);
-  border-radius: 20px;
-}
-.box3 {
-  width: 75%;
-  height: 41%;
-  padding: 0;
-  margin: 0;
-  box-shadow: 2px 2px 20px rgb(230, 230, 230);
-  border-radius: 20px;
-}
-.imgactiv1 {
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  width: 100%;
-  height: 90%;
-  padding-bottom: 0;
-  object-fit: cover;
-}
-.imgactiv2 {
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  width: 100%;
-  height: 82%;
-  padding-bottom: 0;
-  object-fit: cover;
-}
-.imgactiv3 {
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  width: 100%;
-  height: 76%;
-  padding-bottom: 0;
-  object-fit: cover;
-}
-.figure {
-	background-color: white;
-  border-radius: 20px;
-}
-
 footer {
 	border: 1px solid;
 	background-color: #f2f2f2;
@@ -569,7 +576,6 @@ footer {
     margin-right: 13vw;
     margin-left: 9vw;
 }
-
 .apropos {
     margin-right: 13vw;
     margin-left: 3vw;
@@ -587,27 +593,20 @@ footer {
 	.apropos {
 		padding-left: 5px;
 	}
-
-	#activitesection {
-		margin-bottom: 20px;
-	}
 	.boxpopulaire {
 		height: 140px ;
 	}
-	.box1 {
-		padding-bottom: 20px;
+	.imgactiv1 {
+		height: 28vw;
 	}
-	.box2 {
-		padding-bottom: 20px;
-	}
-	.box1,
-	.box2,
-	.box3 {
-		width: 85%;
+	.imgactiv2,
+	.imgactiv4 {
+		height: 10.5vw;
 	}
 	.imgactiv3 {
-		height: 62%;
+		height: 8.5vw;
 	}
+
 }
 
 @media screen and (max-width: 1024px){
@@ -620,18 +619,19 @@ footer {
 		margin-bottom: 20px;
 	}
 	.lespluspopulaires {
-    justify-content: space-between;
     height: auto;
     display: flex;
 }
 .boxpopulaire {
-    height: 15vw;
+    height: 16vw;
     margin-bottom: 25px;
     box-shadow: 0 0 6px 3px #b1b1b14b;
-		width: 29%;
-    justify-content: space-between;
-    gap: 20px;
+		width: 31%;
     display: inline-flex;
+	}
+	.populaires {
+		display: flex;
+		gap: 2%;
 	}
 	.imagepopulaire {
 		width: 25%;
@@ -640,59 +640,6 @@ footer {
 		width: 95%;
 		justify-content: space-between;
 	}
-	#activitesection {
-    width: 95%;
-    margin: 0;
-  }
-  .activites {
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    height: auto;
-    margin-bottom: 2.5vw;
-  }
-  .activite1 {
-    width: 35%;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-  }
-  .activite2 {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    width: 65%;
-  }
-  .box3 {
-    width: 30vw;
-		height: 93%;
-    margin-bottom: 25px;
-    box-shadow: 0 0 6px 3px #b1b1b14b;
-  }
-	.box1 {
-		width: 32vw;
-		height: 82%;
-	}
-	.box2 {
-    width: 30vw;
-		height: 82%;
-	}
-  .box2,
-  .box3 {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-  }
-  .imgactiv1,
-  .imgactiv2,
-  .imgactiv3 {
-    height: 18vw;
-    padding-bottom: 0;
-    background-color: white;
-
-  }
   .container {
 		padding-left: 10px;
 		padding-right: 10px;
@@ -701,6 +648,53 @@ footer {
 		padding-left: 10px;
 		padding-right: 10px;
 	}
+	#activitesection {
+    width: 95%;
+    justify-content: center;
+  }
+  .activites {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    height: auto;
+    width: 95%;
+    height: 80vw;
+    justify-content: center;
+  }
+  .activite2et3,
+  .activite5et6 {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
+  .activite1,
+  .activite2,
+  .activite3,
+  .activite4,
+  .activite5,
+  .activite6 {
+    width: 47vw;
+    height: 24vw;
+    margin-bottom: 20px;
+  }
+  .activite2,
+  .activite3,
+  .activite5,
+  .activite6 {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
+
+  .imgactiv1,
+  .imgactiv2,
+  .imgactiv3,
+  .imgactiv4 {
+    height: 18vw;
+    padding-bottom: 1vw;
+  }
+
 
 
 }
@@ -769,7 +763,7 @@ footer {
 	.imgactiv1,
   .imgactiv2,
   .imgactiv3 {
-    height: 14vw;
+    height: 20vw;
     padding-bottom: 0;
   }
   .activites h4 {
@@ -777,51 +771,95 @@ footer {
   }
   #activitesection h3 {
   	width: 95%;
-  	padding-left: 2.2vw;
+  	padding-left: 0;
   }
+  .container {
+  	background-color: white;
+  }
+  .lespluspopulaires,
+  .populaires,
+  .container,
+  .hebergements {
+  	-webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    -moz-flex-direction: column;
+    flex-direction: column;
+    height: 100%;
+    display: flex;
+  }
+  .lespluspopulaires {
+  	width: 95%;
+  }
+  .boxpopulaire {
+  	width: 98%;
+  	height: 22vw;
+  }
+  .activites {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    -moz-flex-direction: column;
+    flex-direction: column;
+    height: 100%;
+    display: flex;
+    width: 100%;
+  }
+  .activite2et3,
+  .activite5et6 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    -moz-flex-direction: column;
+    flex-direction: column;
+    width: 100%;
+  }
+  .activite1,
+  .activite2,
+  .activite3,
+  .activite4,
+  .activite5,
+  .activite6 {
+    width: 98%;
+    height: 30vw;
+    margin-bottom: 20px;
+  }
+  .boxhebergement {
+  	height: 35vw;
+  	width: 98%;
+  }
+  .activite2,
+  .activite3,
+  .activite5,
+  .activite6 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    -moz-flex-direction: column;
+    flex-direction: column;
+  }
+  #activitesection {
+  	width: 95%;
+  	padding-left: 1.5vw;
+  }
+  .noshebergements,
+	.assistance {
+    margin-right: 5vw;
+    margin-left: 5vw;
+}
+	.apropos {
+    margin-right: 5vw;
+    margin-left: 3vw;
+}
 
 }
 	
-@media screen and (max-width: 576px){
-	#activitesection {
-    width: 95%;
-  }
-  .activites {
-    flex-direction: column;
-    height: auto;
-  }
-  .activite1 {
-    width: 95%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-  .activite2 {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    width: 95%;
-  }
+@media screen and (max-width: 480px){
   .etoilesheb{
   	font-size: 0.6em;
   }
   .etoiles {
   	font-size: 0.6em;
-  }
-  .box2,
-  .box3 {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-  .imgactiv1,
-  .imgactiv2,
-  .imgactiv3 {
-    height: 150px;
-    padding-bottom: 1vw;
   }
   footer,
   footer ul,
@@ -862,42 +900,25 @@ footer {
     width: 100%;
     margin: 10px 0px 10px 6px;
   }
-  .boxpopulaire {
-    height: 32vw;
-  }
-  .boxhebergement {
-  	height: 200px;
-  }
   .container {
 		justify-content: center;
 	}
 	#activitesection,
 	.activites {
- 	  padding-left: 2.2vw;
- 	  padding-right: 10px;
+ 	  padding-left: 1.5vw;
+ 	  padding-right: 1.5vw;
  	  justify-content: center;
+ 	  width: 96%;
 }
-	.boxhebergement {
-		width: 100%;
-		height: 200px;
+	#activitesection h4 {
+		padding-left: 5px;
 	}
-	.boxpopulaire {
-    width: 90%;
-  }
   .iconinfo {
 		width: 25px;
 		height: 25px;
 		padding-left: 3px;
 		padding-right: 3px;
 	}
-	.box1,
-	.box2,
-	.box3 {
-		width: 100%;
-		height: 100%;
-		padding-bottom: 25px;
-		margin-bottom: 20px;
-  }
   .searchfield {
 		width: 73%;
 		padding-left: 2px;
@@ -905,5 +926,16 @@ footer {
 	.research {
 		width: 76%;
 	}
+	.boxhebergement {
+		height: 48vw;
+	}
+	.imgheb {
+		height: 25vw;
+	}
+	.boxpopulaire {
+  	height: 28vw;
+  	width: 96%;
+  }
+
 
 }
