--- a/styles.css
+++ b/styles.css
@@ -464,51 +464,52 @@ main {
 	font-weight: bold;
 }
 .activite1 {
-    width: 20%;
-    display: flex;
-    height: 33.5vw;
-    border-radius: 20px;
-    background-color: #ffffff;
-    box-shadow: 0 0 6px 3px #b1b1b14b;
+  width: 20%;
+  display: flex;
+  height: 33.5vw;
+  border-radius: 20px;
+  background-color: #ffffff;
+  box-shadow: 0 0 6px 3px #b1b1b14b;
 
 }
 
 .activite4 {
-    width: 20%;
-    display: flex;
-    height: 33.5vw;
-    border-radius: 20px;
-    background-color: #ffffff;
-    box-shadow: 0 0 6px 3px #b1b1b14b;
+  width: 20%;
+  display: flex;
+  height: 33.5vw;
+  border-radius: 20px;
+  background-color: #ffffff;
+  box-shadow: 0 0 6px 3px #b1b1b14b;
 }
 
 .activite2 {
-		flex-basis: 60%;
-    height: 16vw;
-    border-radius: 20px;
-    background-color: #ffffff;
-    box-shadow: 0 0 6px 3px #b1b1b14b;
-    margin-bottom: 18%;
+	flex-basis: 60%;
+  height: 16vw;
+  border-radius: 20px;
+  background-color: #ffffff;
+  box-shadow: 0 0 6px 3px #b1b1b14b;
+  margin-bottom: 18%;
+  display: flex;
 }
 
 .activite3 {
-		flex-basis: 40%;
-    height: 14vw;
-    border-radius: 20px;
-    background-color: #ffffff;
-    box-shadow: 0 0 6px 3px #b1b1b14b;
-    display: flex;
+	flex-basis: 40%;
+  height: 14vw;
+  border-radius: 20px;
+  background-color: #ffffff;
+  box-shadow: 0 0 6px 3px #b1b1b14b;
+  display: flex;
 }
 
 
 .activite5 {
-		flex-basis: 45%;
-    height: 15vw;
-    border-radius: 20px;
-    background-color: #ffffff;
-    box-shadow: 0 0 6px 3px #b1b1b14b;
-    display: flex;
-    margin-bottom: 17%;
+	flex-basis: 45%;
+  height: 15vw;
+  border-radius: 20px;
+  background-color: #ffffff;
+  box-shadow: 0 0 6px 3px #b1b1b14b;
+  display: flex;
+  margin-bottom: 17%;
 }
 
 .activite6 {
@@ -521,7 +522,7 @@ main {
 }
 .activite2et3,
 .activite5et6 {
-	width: 20%;
+	width: 20vw;
 }
 
 
@@ -529,10 +530,11 @@ main {
 .imgactiv2,
 .imgactiv3,
 .imgactiv4 {
-	width: 100%;
+	width: 20vw;
 	border-top-left-radius: 20px;
 	border-top-right-radius: 20px;
 	object-fit: cover;
+  display: flex;
 }
 
 .imgactiv1 {
@@ -649,21 +651,22 @@ footer {
 		padding-right: 10px;
 	}
 	#activitesection {
-    width: 95%;
     justify-content: center;
+    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
   }
   .activites {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    height: auto;
-    width: 95%;
-    height: 80vw;
+    height: 82vw;
     justify-content: center;
   }
   .activite2et3,
   .activite5et6 {
+  	-moz-box-orient: horizontal;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
+    -moz-box-direction: normal;
     -ms-flex-direction: row;
     flex-direction: row;
   }
@@ -673,7 +676,7 @@ footer {
   .activite4,
   .activite5,
   .activite6 {
-    width: 47vw;
+    width: 44vw;
     height: 24vw;
     margin-bottom: 20px;
   }
@@ -681,9 +684,11 @@ footer {
   .activite3,
   .activite5,
   .activite6 {
+  	-moz-box-orient: horizontal;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
+    -moz-box-direction: normal;
     flex-direction: row;
   }
 
@@ -693,6 +698,7 @@ footer {
   .imgactiv4 {
     height: 18vw;
     padding-bottom: 1vw;
+    width: 44vw;
   }
 
 
@@ -751,20 +757,13 @@ footer {
   .sinscrire {
     margin-right: 25px;
   }
-	.noshebergements,
-	.assistance {
-    margin-right: 11vw;
-    margin-left: 9vw;
-}
-	.apropos {
-    margin-right: 11vw;
-    margin-left: 3vw;
-	}
 	.imgactiv1,
   .imgactiv2,
-  .imgactiv3 {
+  .imgactiv3,
+  .imgactiv4 {
     height: 20vw;
     padding-bottom: 0;
+    width: 90vw;
   }
   .activites h4 {
   	padding-left: 0;
@@ -783,7 +782,6 @@ footer {
   	-webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
-    -moz-flex-direction: column;
     flex-direction: column;
     height: 100%;
     display: flex;
@@ -799,18 +797,17 @@ footer {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
-    -moz-flex-direction: column;
     flex-direction: column;
-    height: 100%;
     display: flex;
     width: 100%;
   }
   .activite2et3,
   .activite5et6 {
-    -webkit-box-orient: vertical;
+     -webkit-box-orient: vertical;
+    -moz-box-orient:  vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
-    -moz-flex-direction: column;
+    -moz-box-direction: column;
     flex-direction: column;
     width: 100%;
   }
@@ -820,7 +817,7 @@ footer {
   .activite4,
   .activite5,
   .activite6 {
-    width: 98%;
+    width: 90vw;
     height: 30vw;
     margin-bottom: 20px;
   }
@@ -833,9 +830,10 @@ footer {
   .activite5,
   .activite6 {
     -webkit-box-orient: vertical;
+    -moz-box-orient:  vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
-    -moz-flex-direction: column;
+    -moz-box-direction: column;
     flex-direction: column;
   }
   #activitesection {
@@ -846,11 +844,14 @@ footer {
 	.assistance {
     margin-right: 5vw;
     margin-left: 5vw;
-}
+	}
 	.apropos {
     margin-right: 5vw;
     margin-left: 3vw;
-}
+	}
+	.activites {
+		height: 220vw;
+	}
 
 }
 	
@@ -933,8 +934,19 @@ footer {
 		height: 25vw;
 	}
 	.boxpopulaire {
-  	height: 28vw;
+  	height: 30vw;
   	width: 96%;
+  }
+  .activite1,
+  .activite2,
+  .activite3,
+  .activite4,
+  .activite5,
+  .activite6 {
+    width: 85vw;
+  }
+  .activites {
+    height: 240vw;
   }
 
 
