--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ h4,p {
 a {
 	color: inherit;
 	text-decoration: none;
+
 	
 }
 
@@ -167,6 +168,7 @@ nav ul li:hover {
 }
 .icontextfilters:hover {
   background-color: #DEEBFF;
+  border-color: #DEEBFF;
 }
 
 
@@ -453,6 +455,10 @@ main {
   height: 35vw;
 
 }
+.activites a {
+	display: flex ;
+	flex-direction: column;
+}
 
 #activitesection h3 {
 	font-size: 1.7em;
@@ -462,6 +468,8 @@ main {
 	font-size: 1.1em;
 	padding-left: 15px;
 	font-weight: bold;
+	margin-bottom: auto;
+	margin-top: auto;
 }
 .activite1 {
   width: 20%;
@@ -584,19 +592,13 @@ footer {
 }
 
 @media screen and (max-width: 1200px){
-	.container {
-		width: 55%;
-	}
 	.boxhebergement {
-		width: 45%;
+		width: 30%;
 		height: 200px;
 		padding: 0;
 	}
 	.apropos {
 		padding-left: 5px;
-	}
-	.boxpopulaire {
-		height: 140px ;
 	}
 	.imgactiv1 {
 		height: 28vw;
@@ -608,22 +610,21 @@ footer {
 	.imgactiv3 {
 		height: 8.5vw;
 	}
-
-}
-
-@media screen and (max-width: 1024px){
 	main {
     flex-direction: column-reverse;
 	}
 	.lespluspopulaires,
 	.container {
-		width: 98%;
 		margin-bottom: 20px;
 	}
 	.lespluspopulaires {
     height: auto;
     display: flex;
+    width: 98%;
 }
+	.container {
+		width: 99%;
+	}
 .boxpopulaire {
     height: 16vw;
     margin-bottom: 25px;
@@ -638,6 +639,10 @@ footer {
 	.imagepopulaire {
 		width: 25%;
 	}
+
+}
+
+@media screen and (max-width: 1024px){
 	.poptitle {
 		width: 95%;
 		justify-content: space-between;
@@ -700,6 +705,9 @@ footer {
     padding-bottom: 1vw;
     width: 44vw;
   }
+  .boxhebergement {
+		width: 45%;
+	}
 
 
 
